[gd_scene load_steps=6 format=2]

[ext_resource path="res://hud/messages/DialogBox.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/hud/dialogBoxBottom.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/hud/dialogBoxExpandable.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/hud/dialogBoxMain.png" type="Texture" id=4]
[ext_resource path="res://hud/HUDButton.tscn" type="PackedScene" id=5]

[node name="DialogBox" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="Expandable" type="Sprite" parent="."]
position = Vector2( 0, 18 )
scale = Vector2( 1, 0.999999 )
texture = ExtResource( 3 )
centered = false

[node name="Bottom" type="Sprite" parent="."]
position = Vector2( 0, 19 )
texture = ExtResource( 2 )
centered = false

[node name="Textcontainer" type="Node2D" parent="."]

[node name="ShopButtons" type="Node2D" parent="."]
visible = false
position = Vector2( 0, 50 )

[node name="ShopAccept" parent="ShopButtons" instance=ExtResource( 5 )]
position = Vector2( 59, 0 )
labelText = "Yes"

[node name="ShopRefuse" parent="ShopButtons" instance=ExtResource( 5 )]
position = Vector2( 175, 0 )
labelText = "No"

[node name="SceneButton" parent="." instance=ExtResource( 5 )]
visible = false
labelText = "Proceed"

[node name="Close" parent="." instance=ExtResource( 5 )]
visible = false
labelText = "Close"
